--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Merriweather', serif;
-    background-image: url('../assets/background.jpeg') no-repeat;
+    background-image: url('../assets/background.jpeg');
+    background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
     overflow: hidden;
