--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    overflow: hidden;
+    /*     overflow: hidden; */
     /* display: flex; 
     justify-content: center; */
 }
