--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Merriweather', serif;
-    background-image: url('/assets/background.jpeg');
+    background-image: url('assets/background.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
