--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
     font-family: 'Merriweather', serif;
-    background-image: url('assets/background.jpeg');
+    background-image: url('./assets/background.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    /*     overflow: hidden; */
+    overflow: hidden; 
     /* display: flex; 
     justify-content: center; */
 }
